--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-Login==0.6.3
-Flask-WTF==1.1.1
-WTForms==3.0.1
-Werkzeug==2.3.7
-Pillow==9.5.0
-python-dotenv==1.0.0
-gunicorn==21.2.0
-email-validator==2.0.0
-bcrypt==4.0.1
-reportlab==3.6.12
+Flask>=3.0.0
+Flask-SQLAlchemy>=3.1.1
+Flask-Login>=0.6.3
+Flask-WTF>=1.2.1
+WTForms>=3.1.1
+Werkzeug>=3.0.1
+Pillow>=10.2.0
+python-dotenv>=1.0.0
+gunicorn>=21.2.0
+email-validator>=2.1.0
+bcrypt>=4.1.2
+reportlab>=4.0.7
